updated the font-size on the about page. shifted the position of the about page divs and added modifications for a smaller page. put a close button on the gallery page. updated some navbar styles. added new left and right buttons on the carousel. gave the carousel a definite height in order to stop the image re-sizing as it loops the carousel.

--- a/css/about.css
+++ b/css/about.css
@@ -9,10 +9,22 @@ body {
     margin: 2% 0 0 0;
     z-index: 1;
     color: #070422;
+    font-size: 12.5vh;
 }
 
 #section2Container {
     margin: 2% 0 0 0;
     z-index: 1;
     color: #070422;
+    font-size: 2.5vh;
+}
+
+@media (max-width: 991.98px) {
+    #section1Container {
+        margin: 0;
+    }
+
+    #section2Container {
+        margin: 0;
+    }
 }
