--- a/css/global.css
+++ b/css/global.css
@@ -22,7 +22,7 @@ body {
 
 #navbar {
     top: 0;
-    border-bottom: 1.5px solid white;
+    border-bottom: 1px solid white;
     height: 10vh;
 }
 
@@ -48,7 +48,7 @@ body {
 }
 
 #aboutIcon {
-    font-size: 20px;
+    font-size: 2.75vh;
     text-decoration: none;
     position: relative;
     top: 5vh;
@@ -60,7 +60,7 @@ body {
 }
 
 #galleryIcon {
-    font-size: 20px;
+    font-size: 2.75vh;
     text-decoration: none;
     position: relative;
     top: 5vh;
@@ -72,7 +72,7 @@ body {
 }
 
 /*#contactIcon {
-    font-size: 20px;
+    font-size: 2.75vh;
     text-decoration: none;
 }
 
